--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 	"OpenStreetMap": osm
       };
 	  
-      var 	    
+      var baseLayers =	{
+	"MapBox": osm
+      };    
 	    
       var overlays = {
 	"Riqueza de especies": riqueza,
