--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
       registrosPresencia.addTo(mapa);	    
 	    
       var baseLayers = {
-	"OpenStreetMap": osm
+	"OpenStreetMap": osm,
+	"Mapbox": mbox   
       };
 	  
       var baseLayers =	{
