--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ejemplo de mapa de coropletas con Leaflet y GeoJSON</title>
+    <title>Población de hombres por cantón</title>
 
     <meta charset="UTF-8" />
 	
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <h1>Riqueza de especies de aves acuáticas residentes en los sitios Ramsar de Costa Rica</h1>
+    <h1>Población de hombres por Cantón para el año 2000</h1>
     <div id='map'></div>
     
     <script src="js/riqespecies_avesacures-cr_ramsar-2017-wgs84.js" type="text/javascript"></script>
