--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     
     <script src="js/riqespecies_avesacures-cr_ramsar-2017-wgs84.js" type="text/javascript"></script>
     <script src="js/regPresGBIFAvesAcuRes-cr_ramsar-2017-wgs84.js"  type="text/javascript"></script>
-
+    <script src="js/cantonesCR2.js"  type="text/javascript"></script>
+	  
     <script>
       var mapa = L.map('map').setView([9.7, -84], 8);
       var osm  = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
