--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       //})
       //riqueza.addTo(mapa);//
 	    
-      var poblacionMasc = L.geoJson(POB_2000_H, {
+      var poblacionMasc = L.geoJson(cantonesCR2, {
         style: function (feature) {
 	  return {
 	    weight: 2,
